--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylelint-themeizer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/variables.js",
   "files": [
@@ -23,11 +23,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "stylelint": "14.3.0",
     "themeizer-cli": "0.3.3"
   },
   "devDependencies": {
+    "stylelint": "14.3.0",
     "@types/node": "17.0.12",
     "typescript": "4.5.5"
+  },
+  "peerDependencies": {
+    "stylelint": ">=8.0.0"
   }
 }
