--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "stylelint-themeizer",
-  "version": "0.0.3",
-  "description": "",
+  "version": "0.0.4",
+  "description": "Stylelint plugin for \"Themeizer\" ecosystem",
   "main": "dist/variables.js",
   "files": [
     "dist"
   ],
   "types": "dist/variables.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "stylelint **/*.css"
+    "build": "tsc"
   },
   "keywords": [
     "stylelint-plugin",
     "themeizer",
     "theming",
-    "css-variables"
+    "css-variables",
+    "variables",
+    "colors",
+    "css",
+    "styles"
   ],
   "repository": {
     "type": "git",
@@ -31,8 +34,8 @@
     "themeizer-cli": "0.3.3"
   },
   "devDependencies": {
-    "stylelint": "14.3.0",
     "@types/node": "17.0.12",
+    "stylelint": "14.3.0",
     "typescript": "4.5.5"
   },
   "peerDependencies": {
